--- a/idlib.vcxproj
+++ b/idlib.vcxproj
@@ -244,55 +244,55 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\IdLib\Colour\Utilities.cpp" />
-    <ClCompile Include="src\IdLib\Signal\ConnectionBase.cpp" />
-    <ClCompile Include="src\IdLib\Signal\NodeBase.cpp" />
-    <ClCompile Include="src\IdLib\Signal\SignalBase.cpp" />
-    <ClCompile Include="src\IdLib\TextRange.cpp" />
-    <ClCompile Include="src\IdLib\Location.cpp" />
-    <ClCompile Include="src\IdLib\IdLib.cpp" />
+    <ClCompile Include="src\idlib\color\Utilities.cpp" />
+    <ClCompile Include="src\idlib\signal\ConnectionBase.cpp" />
+    <ClCompile Include="src\idlib\signal\NodeBase.cpp" />
+    <ClCompile Include="src\idlib\signal\SignalBase.cpp" />
+    <ClCompile Include="src\idlib\TextRange.cpp" />
+    <ClCompile Include="src\idlib\Location.cpp" />
+    <ClCompile Include="src\idlib\idlib.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\IdLib\Math\Dimensionality.hpp" />
-    <ClInclude Include="src\IdLib\Colour\Utilities.hpp" />
-    <ClInclude Include="src\IdLib\Colour\Colour.hpp" />
-    <ClInclude Include="src\IdLib\Colour\ColourComponents.hpp" />
-    <ClInclude Include="src\IdLib\Colour\ColourL.hpp" />
-    <ClInclude Include="src\IdLib\Colour\ColourLA.hpp" />
-    <ClInclude Include="src\IdLib\Colour\ColourRGB.hpp" />
-    <ClInclude Include="src\IdLib\Colour\ColourRGBA.hpp" />
-    <ClInclude Include="src\IdLib\Colour\ColourSpace.hpp" />
-    <ClInclude Include="src\IdLib\Colour\Include.hpp" />
-    <ClInclude Include="src\IdLib\Signal\Connection.hpp" />
-    <ClInclude Include="src\IdLib\Signal\ConnectionBase.hpp" />
-    <ClInclude Include="src\IdLib\Signal\Node.hpp" />
-    <ClInclude Include="src\IdLib\Signal\NodeBase.hpp" />
-    <ClInclude Include="src\IdLib\Signal\ScopedConnection.hpp" />
-    <ClInclude Include="src\IdLib\Signal\Signal.hpp" />
-    <ClInclude Include="src\IdLib\Signal\SignalBase.hpp" />
-    <ClInclude Include="src\IdLib\Signal\Include.hpp" />
-    <ClInclude Include="src\IdLib\TextRange.hpp" />
-    <ClInclude Include="src\IdLib\CompilationErrorException.hpp" />
-    <ClInclude Include="src\IdLib\Token.hpp" />
-    <ClInclude Include="src\IdLib\CRTP.hpp" />
-    <ClInclude Include="src\IdLib\BitmaskTypes.hpp" />
-    <ClInclude Include="src\IdLib\DebugAssert.hpp" />
-    <ClInclude Include="src\IdLib\InvalidArgumentException.hpp" />
-    <ClInclude Include="src\IdLib\OutOfBoundsException.hpp" />
-    <ClInclude Include="src\IdLib\RuntimeErrorException.hpp" />
-    <ClInclude Include="src\IdLib\AssertionFailedException.hpp" />
-    <ClInclude Include="src\IdLib\EnvironmentErrorException.hpp" />
-    <ClInclude Include="src\IdLib\Exception.hpp" />
-    <ClInclude Include="src\IdLib\Location.hpp" />
-    <ClInclude Include="src\IdLib\LockFailedException.hpp" />
-    <ClInclude Include="src\IdLib\UnhandledSwitchCaseException.hpp" />
-    <ClInclude Include="src\IdLib\NonCopyable.hpp" />
-    <ClInclude Include="src\IdLib\Platform.hpp" />
-    <ClInclude Include="src\IdLib\Target.hpp" />
-    <ClInclude Include="src\IdLib\IdLib.hpp" />
+    <ClInclude Include="src\idlib\Math\Dimensionality.hpp" />
+    <ClInclude Include="src\idlib\color\Utilities.hpp" />
+    <ClInclude Include="src\idlib\color\Colour.hpp" />
+    <ClInclude Include="src\idlib\color\ColourComponents.hpp" />
+    <ClInclude Include="src\idlib\color\ColourL.hpp" />
+    <ClInclude Include="src\idlib\color\ColourLA.hpp" />
+    <ClInclude Include="src\idlib\color\ColourRGB.hpp" />
+    <ClInclude Include="src\idlib\color\ColourRGBA.hpp" />
+    <ClInclude Include="src\idlib\color\ColourSpace.hpp" />
+    <ClInclude Include="src\idlib\color\Include.hpp" />
+    <ClInclude Include="src\idlib\signal\Connection.hpp" />
+    <ClInclude Include="src\idlib\signal\ConnectionBase.hpp" />
+    <ClInclude Include="src\idlib\signal\Node.hpp" />
+    <ClInclude Include="src\idlib\signal\NodeBase.hpp" />
+    <ClInclude Include="src\idlib\signal\ScopedConnection.hpp" />
+    <ClInclude Include="src\idlib\signal\Signal.hpp" />
+    <ClInclude Include="src\idlib\signal\SignalBase.hpp" />
+    <ClInclude Include="src\idlib\signal\Include.hpp" />
+    <ClInclude Include="src\idlib\TextRange.hpp" />
+    <ClInclude Include="src\idlib\CompilationErrorException.hpp" />
+    <ClInclude Include="src\idlib\Token.hpp" />
+    <ClInclude Include="src\idlib\CRTP.hpp" />
+    <ClInclude Include="src\idlib\BitmaskTypes.hpp" />
+    <ClInclude Include="src\idlib\DebugAssert.hpp" />
+    <ClInclude Include="src\idlib\InvalidArgumentException.hpp" />
+    <ClInclude Include="src\idlib\OutOfBoundsException.hpp" />
+    <ClInclude Include="src\idlib\RuntimeErrorException.hpp" />
+    <ClInclude Include="src\idlib\AssertionFailedException.hpp" />
+    <ClInclude Include="src\idlib\EnvironmentErrorException.hpp" />
+    <ClInclude Include="src\idlib\Exception.hpp" />
+    <ClInclude Include="src\idlib\Location.hpp" />
+    <ClInclude Include="src\idlib\LockFailedException.hpp" />
+    <ClInclude Include="src\idlib\UnhandledSwitchCaseException.hpp" />
+    <ClInclude Include="src\idlib\NonCopyable.hpp" />
+    <ClInclude Include="src\idlib\Platform.hpp" />
+    <ClInclude Include="src\idlib\Target.hpp" />
+    <ClInclude Include="src\idlib\idlib.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\IdLib\CurrentFunction.inline" />
+    <None Include="src\idlib\CurrentFunction.inline" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
