--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -9,160 +9,160 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files\Signal">
+    <Filter Include="Header Files\signal">
       <UniqueIdentifier>{5773c1da-cbc5-4ab9-95fc-a21e6ad133de}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Signal">
-      <UniqueIdentifier>{85d4351b-f275-4b8f-9a95-4e4cbb9b9b32}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Colour">
-      <UniqueIdentifier>{91080862-76cd-4be9-addf-73d4e3f6970c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Colour">
-      <UniqueIdentifier>{985c56b7-2424-4422-aba9-ddafe963cc74}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Math">
+    <Filter Include="Header Files\math">
       <UniqueIdentifier>{a9b6abf4-79f0-4dfe-8373-76a0f4df9c8f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\color">
+      <UniqueIdentifier>{91080862-76cd-4be9-addf-73d4e3f6970c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\signal">
+      <UniqueIdentifier>{85d4351b-f275-4b8f-9a95-4e4cbb9b9b32}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\color">
+      <UniqueIdentifier>{985c56b7-2424-4422-aba9-ddafe963cc74}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\IdLib\IdLib.cpp">
+    <ClCompile Include="src\idlib\Location.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\IdLib\Location.cpp">
+    <ClCompile Include="src\idlib\TextRange.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\IdLib\TextRange.cpp">
+    <ClCompile Include="src\idlib\signal\ConnectionBase.cpp">
+      <Filter>Source Files\signal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\idlib\signal\NodeBase.cpp">
+      <Filter>Source Files\signal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\idlib\signal\SignalBase.cpp">
+      <Filter>Source Files\signal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\idlib\Color\Utilities.cpp">
+      <Filter>Source Files\color</Filter>
+    </ClCompile>
+    <ClCompile Include="src\idlib\idlib.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\IdLib\Signal\ConnectionBase.cpp">
-      <Filter>Source Files\Signal</Filter>
-    </ClCompile>
-    <ClCompile Include="src\IdLib\Signal\NodeBase.cpp">
-      <Filter>Source Files\Signal</Filter>
-    </ClCompile>
-    <ClCompile Include="src\IdLib\Signal\SignalBase.cpp">
-      <Filter>Source Files\Signal</Filter>
-    </ClCompile>
-    <ClCompile Include="src\IdLib\Colour\Utilities.cpp">
-      <Filter>Source Files\Colour</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\IdLib\IdLib.hpp">
+    <ClInclude Include="src\idlib\Platform.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\Platform.hpp">
+    <ClInclude Include="src\idlib\Target.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\Target.hpp">
+    <ClInclude Include="src\idlib\NonCopyable.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\NonCopyable.hpp">
+    <ClInclude Include="src\idlib\AssertionFailedException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\AssertionFailedException.hpp">
+    <ClInclude Include="src\idlib\Exception.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\Exception.hpp">
+    <ClInclude Include="src\idlib\Location.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\Location.hpp">
+    <ClInclude Include="src\idlib\LockFailedException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\LockFailedException.hpp">
+    <ClInclude Include="src\idlib\UnhandledSwitchCaseException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\UnhandledSwitchCaseException.hpp">
+    <ClInclude Include="src\idlib\EnvironmentErrorException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\EnvironmentErrorException.hpp">
+    <ClInclude Include="src\idlib\RuntimeErrorException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\RuntimeErrorException.hpp">
+    <ClInclude Include="src\idlib\OutOfBoundsException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\OutOfBoundsException.hpp">
+    <ClInclude Include="src\idlib\InvalidArgumentException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\InvalidArgumentException.hpp">
+    <ClInclude Include="src\idlib\DebugAssert.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\DebugAssert.hpp">
+    <ClInclude Include="src\idlib\BitmaskTypes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\BitmaskTypes.hpp">
+    <ClInclude Include="src\idlib\CRTP.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\CRTP.hpp">
+    <ClInclude Include="src\idlib\Token.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\Token.hpp">
+    <ClInclude Include="src\idlib\CompilationErrorException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\CompilationErrorException.hpp">
+    <ClInclude Include="src\idlib\TextRange.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IdLib\TextRange.hpp">
+    <ClInclude Include="src\idlib\signal\Connection.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\ConnectionBase.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\Node.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\NodeBase.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\ScopedConnection.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\Signal.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\SignalBase.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\signal\Include.hpp">
+      <Filter>Header Files\signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\Include.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\Utilities.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\math\Dimensionality.hpp">
+      <Filter>Header Files\math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\Colour.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\ColourComponents.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\ColourLA.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\ColourL.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\ColourRGB.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\ColourRGBA.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\color\ColourSpace.hpp">
+      <Filter>Header Files\color</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\idlib.hpp">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\Connection.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\ConnectionBase.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\Node.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\NodeBase.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\ScopedConnection.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\Signal.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\SignalBase.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Signal\Include.hpp">
-      <Filter>Header Files\Signal</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\Colour.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\ColourComponents.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\ColourL.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\ColourLA.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\ColourRGB.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\ColourRGBA.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\ColourSpace.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\Include.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Colour\Utilities.hpp">
-      <Filter>Header Files\Colour</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IdLib\Math\Dimensionality.hpp">
-      <Filter>Header Files\Math</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\IdLib\CurrentFunction.inline">
+    <None Include="src\idlib\CurrentFunction.inline">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
