--- a/idlib-tests.vcxproj.filters
+++ b/idlib-tests.vcxproj.filters
@@ -45,5 +45,17 @@
     <ClCompile Include="tests\idlib\Tests\qualified_name.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tests\idlib\Tests\prefix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\idlib\Tests\suffix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\idlib\Tests\to_lower.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\idlib\Tests\to_upper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
